// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonTemplate match snapshot 1`] = `
Array [
  Array [
    Object {
      "node": <ButtonTemplate
        sharable={true}
        text="abc"
      >
        <Machinat.Fragment>
          <URLButton
            title="check"
            url="http://xxx.yy.z"
          />
          <PostbackButton
            payload="_MORE_"
            title="more"
          />
          <CallButton
            number="+12345678"
            title="call us"
          />
        </Machinat.Fragment>
      </ButtonTemplate>,
      "path": "$",
      "type": "unit",
      "value": Object {
        "message": Object {
          "attachment": Object {
            "payload": Object {
              "buttons": Array [
                "__RENDERED_BUTTON_OBJ_1__",
                "__RENDERED_BUTTON_OBJ_2__",
                "__RENDERED_BUTTON_OBJ_3__",
              ],
              "sharable": true,
              "template_type": "button",
              "text": "
__RENDERED_TEXT_1__
__RENDERED_TEXT_2__
__RENDERED_TEXT_3__",
            },
            "type": "template",
          },
        },
      },
    },
  ],
  Array [
    Object {
      "node": <ButtonTemplate
        text={
          Array [
            <i>
              foo
            </i>,
            <b>
              bar
            </b>,
            <del>
              baz
            </del>,
          ]
        }
      >
        <Machinat.Fragment>
          <URLButton
            title="check"
            url="http://xxx.yy.z"
          />
          <PostbackButton
            payload="_MORE_"
            title="more"
          />
          <CallButton
            number="+12345678"
            title="call us"
          />
        </Machinat.Fragment>
      </ButtonTemplate>,
      "path": "$",
      "type": "unit",
      "value": Object {
        "message": Object {
          "attachment": Object {
            "payload": Object {
              "buttons": Array [
                "__RENDERED_BUTTON_OBJ_1__",
                "__RENDERED_BUTTON_OBJ_2__",
                "__RENDERED_BUTTON_OBJ_3__",
              ],
              "sharable": undefined,
              "template_type": "button",
              "text": "
__RENDERED_TEXT_1__
__RENDERED_TEXT_2__
__RENDERED_TEXT_3__",
            },
            "type": "template",
          },
        },
      },
    },
  ],
]
`;

exports[`GenericItem match snapshot 1`] = `
Array [
  Array [
    Object {
      "node": <GenericItem
        title="foo"
      />,
      "path": "$",
      "type": "part",
      "value": Object {
        "buttons": undefined,
        "default_action": undefined,
        "image_url": undefined,
        "subtitle": undefined,
        "title": "foo",
      },
    },
  ],
  Array [
    Object {
      "node": <GenericItem
        subtitle="bar"
        title="foo"
      />,
      "path": "$",
      "type": "part",
      "value": Object {
        "buttons": undefined,
        "default_action": undefined,
        "image_url": undefined,
        "subtitle": "bar",
        "title": "foo",
      },
    },
  ],
  Array [
    Object {
      "node": <GenericItem
        imageURL="http://foo.bar/image"
        title="foo"
      />,
      "path": "$",
      "type": "part",
      "value": Object {
        "buttons": undefined,
        "default_action": undefined,
        "image_url": "http://foo.bar/image",
        "subtitle": undefined,
        "title": "foo",
      },
    },
  ],
  Array [
    Object {
      "node": <GenericItem
        title="foo"
      >
        <Machinat.Fragment>
          <URLButton
            title="check"
            url="http://xxx.yy.z"
          />
          <PostbackButton
            payload="_MORE_"
            title="more"
          />
          <CallButton
            number="+12345678"
            title="call us"
          />
        </Machinat.Fragment>
      </GenericItem>,
      "path": "$",
      "type": "part",
      "value": Object {
        "buttons": Array [
          "__RENDERED_BUTTON_OBJ_1__",
          "__RENDERED_BUTTON_OBJ_2__",
          "__RENDERED_BUTTON_OBJ_3__",
        ],
        "default_action": undefined,
        "image_url": undefined,
        "subtitle": undefined,
        "title": "foo",
      },
    },
  ],
  Array [
    Object {
      "node": <GenericItem
        defaultAction={
          <URLButton
            extensions={true}
            fallbackURL="http://foo.baz/login"
            heightRatio="compact"
            hideShareButton={true}
            title="TITLE!"
            url="http://foo.bar/"
          />
        }
        title="foo"
      />,
      "path": "$",
      "type": "part",
      "value": Object {
        "buttons": undefined,
        "default_action": Object {
          "fallback_url": "http://foo.baz/login",
          "messenger_extensions": true,
          "type": "web_url",
          "url": "http://foo.bar/",
          "webview_height_ratio": "compact",
          "webview_share_button": "hide",
        },
        "image_url": undefined,
        "subtitle": undefined,
        "title": "foo",
      },
    },
  ],
  Array [
    Object {
      "node": <GenericItem
        defaultAction={
          Object {
            "fallback_url": "http://foo.baz/login",
            "messenger_extensions": true,
            "type": "web_url",
            "url": "http://foo.bar/",
            "webview_height_ratio": "compact",
            "webview_share_button": "hide",
          }
        }
        title="foo"
      />,
      "path": "$",
      "type": "part",
      "value": Object {
        "buttons": undefined,
        "default_action": Object {
          "fallback_url": "http://foo.baz/login",
          "messenger_extensions": true,
          "type": "web_url",
          "url": "http://foo.bar/",
          "webview_height_ratio": "compact",
          "webview_share_button": "hide",
        },
        "image_url": undefined,
        "subtitle": undefined,
        "title": "foo",
      },
    },
  ],
  Array [
    Object {
      "node": <GenericItem
        defaultAction={
          Object {
            "fallback_url": "http://foo.baz/login",
            "messenger_extensions": true,
            "type": "web_url",
            "url": "http://foo.bar/",
            "webview_height_ratio": "compact",
            "webview_share_button": "hide",
          }
        }
        imageURL="http://foo.bar/image"
        subtitle="bar"
        title="foo"
      >
        <Machinat.Fragment>
          <URLButton
            title="check"
            url="http://xxx.yy.z"
          />
          <PostbackButton
            payload="_MORE_"
            title="more"
          />
          <CallButton
            number="+12345678"
            title="call us"
          />
        </Machinat.Fragment>
      </GenericItem>,
      "path": "$",
      "type": "part",
      "value": Object {
        "buttons": Array [
          "__RENDERED_BUTTON_OBJ_1__",
          "__RENDERED_BUTTON_OBJ_2__",
          "__RENDERED_BUTTON_OBJ_3__",
        ],
        "default_action": Object {
          "fallback_url": "http://foo.baz/login",
          "messenger_extensions": true,
          "type": "web_url",
          "url": "http://foo.bar/",
          "webview_height_ratio": "compact",
          "webview_share_button": "hide",
        },
        "image_url": "http://foo.bar/image",
        "subtitle": "bar",
        "title": "foo",
      },
    },
  ],
]
`;

exports[`GenericTemplate match snapshot 1`] = `
Array [
  Array [
    Object {
      "node": <GenericTemplate>
        <Machinat.Fragment>
          <GenericItem
            subtitle="bar"
            title="foo1"
          />
          <GenericItem
            subtitle="baz"
            title="foo2"
          />
          <GenericItem
            imageURL="http://foo.bar/image"
            title="foo3"
          />
        </Machinat.Fragment>
      </GenericTemplate>,
      "path": "$",
      "type": "unit",
      "value": Object {
        "message": Object {
          "attachment": Object {
            "payload": Object {
              "elements": Array [
                "__RENDERED_GENERIC_ITEM_OBJ_1__",
                "__RENDERED_GENERIC_ITEM_OBJ_2__",
                "__RENDERED_GENERIC_ITEM_OBJ_3__",
              ],
              "image_aspect_ratio": undefined,
              "sharable": undefined,
              "template_type": "generic",
            },
            "type": "template",
          },
        },
      },
    },
  ],
  Array [
    Object {
      "node": <GenericTemplate
        imageAspectRatio="square"
        sharable={true}
      >
        <Machinat.Fragment>
          <GenericItem
            subtitle="bar"
            title="foo1"
          />
          <GenericItem
            subtitle="baz"
            title="foo2"
          />
          <GenericItem
            imageURL="http://foo.bar/image"
            title="foo3"
          />
        </Machinat.Fragment>
      </GenericTemplate>,
      "path": "$",
      "type": "unit",
      "value": Object {
        "message": Object {
          "attachment": Object {
            "payload": Object {
              "elements": Array [
                "__RENDERED_GENERIC_ITEM_OBJ_1__",
                "__RENDERED_GENERIC_ITEM_OBJ_2__",
                "__RENDERED_GENERIC_ITEM_OBJ_3__",
              ],
              "image_aspect_ratio": "square",
              "sharable": true,
              "template_type": "generic",
            },
            "type": "template",
          },
        },
      },
    },
  ],
]
`;

exports[`ListTemplate match snapshot 1`] = `
Array [
  Array [
    Object {
      "node": <ListTemplate>
        <Machinat.Fragment>
          <GenericItem
            subtitle="bar"
            title="foo1"
          />
          <GenericItem
            subtitle="baz"
            title="foo2"
          />
          <GenericItem
            imageURL="http://foo.bar/image"
            title="foo3"
          />
        </Machinat.Fragment>
      </ListTemplate>,
      "path": "$",
      "type": "unit",
      "value": Object {
        "message": Object {
          "attachment": Object {
            "payload": Object {
              "buttons": undefined,
              "elements": Array [
                "__RENDERED_GENERIC_ITEM_OBJ_1__",
                "__RENDERED_GENERIC_ITEM_OBJ_2__",
                "__RENDERED_GENERIC_ITEM_OBJ_3__",
              ],
              "sharable": undefined,
              "template_type": "list",
              "top_element_style": undefined,
            },
            "type": "template",
          },
        },
      },
    },
  ],
  Array [
    Object {
      "node": <ListTemplate
        button={
          <URLButton
            title="check"
            url="http://xxx.yy.z"
          />
        }
      >
        <Machinat.Fragment>
          <GenericItem
            subtitle="bar"
            title="foo1"
          />
          <GenericItem
            subtitle="baz"
            title="foo2"
          />
          <GenericItem
            imageURL="http://foo.bar/image"
            title="foo3"
          />
        </Machinat.Fragment>
      </ListTemplate>,
      "path": "$",
      "type": "unit",
      "value": Object {
        "message": Object {
          "attachment": Object {
            "payload": Object {
              "buttons": Array [
                "__RENDERED_BUTTON_OBJ_1__",
              ],
              "elements": Array [
                "__RENDERED_GENERIC_ITEM_OBJ_1__",
                "__RENDERED_GENERIC_ITEM_OBJ_2__",
                "__RENDERED_GENERIC_ITEM_OBJ_3__",
              ],
              "sharable": undefined,
              "template_type": "list",
              "top_element_style": undefined,
            },
            "type": "template",
          },
        },
      },
    },
  ],
  Array [
    Object {
      "node": <ListTemplate
        button={
          <URLButton
            title="check"
            url="http://xxx.yy.z"
          />
        }
        imageAspectRatio="square"
        sharable={true}
      >
        <Machinat.Fragment>
          <GenericItem
            subtitle="bar"
            title="foo1"
          />
          <GenericItem
            subtitle="baz"
            title="foo2"
          />
          <GenericItem
            imageURL="http://foo.bar/image"
            title="foo3"
          />
        </Machinat.Fragment>
      </ListTemplate>,
      "path": "$",
      "type": "unit",
      "value": Object {
        "message": Object {
          "attachment": Object {
            "payload": Object {
              "buttons": Array [
                "__RENDERED_BUTTON_OBJ_1__",
              ],
              "elements": Array [
                "__RENDERED_GENERIC_ITEM_OBJ_1__",
                "__RENDERED_GENERIC_ITEM_OBJ_2__",
                "__RENDERED_GENERIC_ITEM_OBJ_3__",
              ],
              "sharable": true,
              "template_type": "list",
              "top_element_style": undefined,
            },
            "type": "template",
          },
        },
      },
    },
  ],
]
`;

exports[`MediaTemplate match snapshot 1`] = `
Array [
  Array [
    Object {
      "node": <MediaTemplate
        type="image"
        url="http://..."
      >
        <Machinat.Fragment>
          <URLButton
            title="check"
            url="http://xxx.yy.z"
          />
          <PostbackButton
            payload="_MORE_"
            title="more"
          />
          <CallButton
            number="+12345678"
            title="call us"
          />
        </Machinat.Fragment>
      </MediaTemplate>,
      "path": "$",
      "type": "unit",
      "value": Object {
        "message": Object {
          "attachment": Object {
            "payload": Object {
              "elements": Array [
                Object {
                  "attachment_id": undefined,
                  "buttons": Array [
                    "__RENDERED_BUTTON_OBJ_1__",
                    "__RENDERED_BUTTON_OBJ_2__",
                    "__RENDERED_BUTTON_OBJ_3__",
                  ],
                  "media_type": "image",
                  "url": "http://...",
                },
              ],
              "sharable": undefined,
              "template_type": "media",
            },
            "type": "template",
          },
        },
      },
    },
  ],
  Array [
    Object {
      "node": <MediaTemplate
        attachmentId="__ID__"
        sharable={true}
        type="video"
      >
        <Machinat.Fragment>
          <URLButton
            title="check"
            url="http://xxx.yy.z"
          />
          <PostbackButton
            payload="_MORE_"
            title="more"
          />
          <CallButton
            number="+12345678"
            title="call us"
          />
        </Machinat.Fragment>
      </MediaTemplate>,
      "path": "$",
      "type": "unit",
      "value": Object {
        "message": Object {
          "attachment": Object {
            "payload": Object {
              "elements": Array [
                Object {
                  "attachment_id": "__ID__",
                  "buttons": Array [
                    "__RENDERED_BUTTON_OBJ_1__",
                    "__RENDERED_BUTTON_OBJ_2__",
                    "__RENDERED_BUTTON_OBJ_3__",
                  ],
                  "media_type": "video",
                  "url": undefined,
                },
              ],
              "sharable": true,
              "template_type": "media",
            },
            "type": "template",
          },
        },
      },
    },
  ],
]
`;

exports[`OpenGraphTemplate match snapshot 1`] = `
Array [
  Array [
    Object {
      "node": <OpenGraphTemplate
        url="http://..."
      >
        <Machinat.Fragment>
          <URLButton
            title="check"
            url="http://xxx.yy.z"
          />
          <PostbackButton
            payload="_MORE_"
            title="more"
          />
          <CallButton
            number="+12345678"
            title="call us"
          />
        </Machinat.Fragment>
      </OpenGraphTemplate>,
      "path": "$",
      "type": "unit",
      "value": Object {
        "message": Object {
          "attachment": Object {
            "payload": Object {
              "elements": Array [
                Object {
                  "buttons": Array [
                    "__RENDERED_BUTTON_OBJ_1__",
                    "__RENDERED_BUTTON_OBJ_2__",
                    "__RENDERED_BUTTON_OBJ_3__",
                  ],
                  "url": "http://...",
                },
              ],
              "sharable": undefined,
              "template_type": "open_graph",
            },
            "type": "template",
          },
        },
      },
    },
  ],
  Array [
    Object {
      "node": <OpenGraphTemplate
        sharable={true}
        url="http://..."
      >
        <Machinat.Fragment>
          <URLButton
            title="check"
            url="http://xxx.yy.z"
          />
          <PostbackButton
            payload="_MORE_"
            title="more"
          />
          <CallButton
            number="+12345678"
            title="call us"
          />
        </Machinat.Fragment>
      </OpenGraphTemplate>,
      "path": "$",
      "type": "unit",
      "value": Object {
        "message": Object {
          "attachment": Object {
            "payload": Object {
              "elements": Array [
                Object {
                  "buttons": Array [
                    "__RENDERED_BUTTON_OBJ_1__",
                    "__RENDERED_BUTTON_OBJ_2__",
                    "__RENDERED_BUTTON_OBJ_3__",
                  ],
                  "url": "http://...",
                },
              ],
              "sharable": true,
              "template_type": "open_graph",
            },
            "type": "template",
          },
        },
      },
    },
  ],
]
`;

exports[`ReceiptItem match snapshot 1`] = `
Array [
  Object {
    "node": <ReceiptItem
      currency="USD"
      imageURL="http://i.robot/avatar"
      price={99.99}
      quantity={999}
      subtitle="It's real!"
      title="A robot!"
    />,
    "path": "$",
    "type": "part",
    "value": Object {
      "currency": "USD",
      "image_url": "http://i.robot/avatar",
      "price": 99.99,
      "quantity": 999,
      "subtitle": "It's real!",
      "title": "A robot!",
    },
  },
]
`;

exports[`ReceiptTemplate match snapshot 1`] = `
Array [
  Object {
    "node": <ReceiptTemplate
      address={
        Object {
          "city": "Menlo Park",
          "country": "US",
          "postal_code": "94025",
          "state": "CA",
          "street_1": "1 Hacker Way",
          "street_2": "",
        }
      }
      adjustments={
        Array [
          Object {
            "amount": 20,
            "name": "New Customer Discount",
          },
          Object {
            "amount": 10,
            "name": "$10 Off Coupon",
          },
        ]
      }
      currency="USD"
      orderNumber="12345"
      orderURL="http://what.a.shop"
      paymentMethod="Visa 2345"
      recipientName="John Doe"
      sharable={true}
      summary={
        Object {
          "shipping_cost": 4.95,
          "subtotal": 75,
          "total_cost": 56.14,
          "total_tax": 6.19,
        }
      }
      timestamp="1428444852"
    >
      <ReceiptItem
        title="Buzz Lightyear"
      />
      <ReceiptItem
        title="Woody"
      />
      <ReceiptItem
        title="Slinky Dog"
      />
    </ReceiptTemplate>,
    "path": "$",
    "type": "unit",
    "value": Object {
      "message": Object {
        "attachment": Object {
          "payload": Object {
            "address": Object {
              "city": "Menlo Park",
              "country": "US",
              "postal_code": "94025",
              "state": "CA",
              "street_1": "1 Hacker Way",
              "street_2": "",
            },
            "adjustments": Array [
              Object {
                "amount": 20,
                "name": "New Customer Discount",
              },
              Object {
                "amount": 10,
                "name": "$10 Off Coupon",
              },
            ],
            "currency": "USD",
            "elements": Array [
              "__RENDERED_RECEIPT_TEMPLATE_ITEM_OBJ_1__",
              "__RENDERED_RECEIPT_TEMPLATE_ITEM_OBJ_2__",
              "__RENDERED_RECEIPT_TEMPLATE_ITEM_OBJ_3__",
            ],
            "order_number": "12345",
            "order_url": "http://what.a.shop",
            "payment_method": "Visa 2345",
            "recipient_name": "John Doe",
            "sharable": true,
            "summary": Object {
              "shipping_cost": 4.95,
              "subtotal": 75,
              "total_cost": 56.14,
              "total_tax": 6.19,
            },
            "template_type": "receipt",
            "timestamp": "1428444852",
          },
          "type": "template",
        },
      },
    },
  },
]
`;
